--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Blog</title>
 </head>
 <body>
+
+    <div class="container">
+        <header>
+            <h1>Header</h1>
+        </header>
+        <aside>
+            <h1>Aside</h1>
+        </aside>
+        <main>
+            <h1>Main</h1>
+        </main>
+        <footer>
+            <h1>Footer</h1>
+        </footer>
+    </div>
+
+    <script src="app.js"></script>
     
 </body>
 </html>
