--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <header>
             <h1>Header</h1>
+            <nav></nav>
         </header>
         <aside>
             <h1>Aside</h1>
